[metadata]
license      = GNU General Public License v3 or later (GPLv3+)
license_file = LICENSE
platforms    = any
description  = A HTTP parameter discovery suite.
long_description = file: README.md
keywords     = home, automation
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Network

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build

[isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
multi_line_output = 4
indent = "    "
# By default isort don't check module indexes
not_skip = __init__.py
# Will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = arjun
forced_separate = tests
combine_as_imports = true
use_parentheses = true
